[package]
name = "rendezvous-peer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
libp2p = { version = "0.49.0", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
void = "1.0.2"
